# cmake_dual_build

./: .clangd  CMakeLists.txt  compile_commands.json  compile_flags.txt  justfile  readme.md
examples/: readme.md
extras/: CMakeLists.txt
extras/extra1/: CMakeLists.txt  extra1.cpp
libs/submodule1/: CMakeLists.txt  Config.cmake.in  justfile
libs/submodule1/examples/: CMakeLists.txt  example1.cpp
libs/submodule1/include/submodule1/: submod2_toto.hpp  submod_toto.hpp  submodule1.hpp
libs/submodule1/src/: submod2_toto.cpp  submod_toto.cpp  submodule1.cpp
libs/submodule1/tools/compilation/: PostInstall.cmake
libs/submodule2/: CMakeLists.txt  Config.cmake.in
libs/submodule2/cmake/: base_compile_options.cmake
libs/submodule2/examples/: CMakeLists.txt  example1.cpp
libs/submodule2/src/: submodule2.cpp
saved_pfl_blogpost/: cxx-pflR1_ The Pitchfork Layout (PFL).html
src/: CMakeLists.txt  product_conf.main.cpp  product_conf2.main.cpp
src/module1/: CMakeLists.txt  module1.cpp
tests/: CMakeLists.txt  suite.test.cpp
tests/suites/: suite1.cpp  suite1.hpp
